--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ conf/radiusd/ocsp.conf
 conf/radiusd/tls.conf
 conf/remote_profiles.conf
 conf/pfcron.conf
+conf/certmanager
 bin/pfcmd
 bin/ntlm_auth_wrapper
 sbin/pfcertmanager
