--- a/.gitignore
+++ b/.gitignore
@@ -251,6 +251,7 @@ var/
 raddb/sites-enabled/
 html/captive-portal/content/node_modules/
 html/common/node_modules/
+public/
 
 # dynamic template for admin
 html/pfappserver/root/admin/v-index.tt
