--- a/t/venom/Makefile
+++ b/t/venom/Makefile
@@ -67,7 +67,7 @@ wired_mac_auth_no_teardown: setup global_config
 
 .PHONY: dot1x_eap_tls_pfpki_no_teardown
 dot1x_eap_tls_pfpki_no_teardown: setup global_config
-	./venom-wrapper.sh $(PFSERVERS_DIR)/dot1x_eap_peap_tls_pfpki
+	./venom-wrapper.sh $(PFSERVERS_DIR)/dot1x_eap_tls_pfpki
 
 .PHONY: backup_db_and_restore_no_teardown
 backup_db_and_restore_no_teardown: setup
