--- a/t/venom/vars/all.yml
+++ b/t/venom/vars/all.yml
@@ -1,4 +1,4 @@
----
+g---
 ################################################################################
 # Global variables
 ################################################################################
@@ -199,6 +199,11 @@ configurator.fingerbank_api_key.secret_id: '{{.fingerbank_api_key.secret_id}}'
 ################################################################################
 # dot1x_eap_tls_pfpki test suite specific variables
 ################################################################################
+### Templates
+dot1x_eap_tls_pfpki.templates.radius.name: radius
+dot1x_eap_tls_pfpki.templates.http.name: http
+dot1x_eap_tls_pfpki.templates.user.name: user
+
 ### Certs
 # CA
 dot1x_eap_tls_pfpki.certs.ca.country: CA
