--- a/t/venom/vars/all.yml
+++ b/t/venom/vars/all.yml
@@ -21,6 +21,7 @@ ssh_user: vagrant
 # pfserver variables
 pfserver_webadmin_url: 'https://{{.pfserver_mgmt_ip}}:1443'
 pfserver_default_admin_user: admin
+pfserver_default_system_user: system
 pfserver_admin_password: secret
 pfserver_root_dir: /usr/local/pf
 pfserver_conf_dir: '{{.pfserver_root_dir}}/conf'
@@ -93,6 +94,13 @@ cumulus_switch_group.radiusSecret: testing123
 cumulus_switch.id1: '{{.switch01_mgmt_ip}}'
 cumulus_switch.id2: '{{.switch01.dot1x_interface.mac}}'
 cumulus_switch.description: switch01
+
+################################################################################
+# global_config_tenant test suite specific variables
+################################################################################
+global_config_tenant.tenant.name: example
+global_config_tenant.tenant.domain_name: '{{.configurator.domain}}'
+global_config_tenant.tenant.portal_domain_name: '{{.configurator.hostname}}.{{.configurator.domain}}'
 
 ################################################################################
 # dot1x_eap_peap test suite specific variables
@@ -214,3 +222,32 @@ captive_portal.profiles.locales4: it_IT
 
 # URL
 captive_portal.reg.url: 'https://{{.configurator.interfaces.reg.ip}}/captive-portal'
+
+################################################################################
+# pfdhcplistener_single_tenant test suite specific variables
+################################################################################
+# node10
+pfdhcplistener_single_tenant.nodes.node10.mac: 22:22:22:22:22:22
+pfdhcplistener_single_tenant.nodes.node10.mac_url_encoded: 22%3A22%3A22%3A22%3A22%3A22
+pfdhcplistener_single_tenant.nodes.node10.first_ip: 172.20.20.192
+pfdhcplistener_single_tenant.nodes.node10.second_ip: 172.20.20.193
+pfdhcplistener_single_tenant.nodes.node10.hostname: node10
+pfdhcplistener_single_tenant.nodes.node10.dhcp_fingerprint: 1,2,3,4
+pfdhcplistener_single_tenant.nodes.node10.dhcp_vendor: test
+# need to be a network not already attached to PacketFence server
+pfdhcplistener_single_tenant.nodes.node10.dhcp_server: 10.10.10.1
+
+################################################################################
+# pfdhcplistener_multi_tenant test suite specific variables
+################################################################################
+# node11
+pfdhcplistener_multi_tenant.nodes.node11.mac: 33:33:33:33:33:23
+pfdhcplistener_multi_tenant.nodes.node11.mac_url_encoded: 33%3A33%3A33%3A33%3A33%3A33
+pfdhcplistener_multi_tenant.nodes.node11.first_ip: 172.20.20.192
+pfdhcplistener_multi_tenant.nodes.node11.second_ip: 172.20.20.193
+pfdhcplistener_multi_tenant.nodes.node11.hostname: node11
+pfdhcplistener_multi_tenant.nodes.node11.dhcp_fingerprint: 1,2,3,4
+pfdhcplistener_multi_tenant.nodes.node11.dhcp_vendor: test
+# need to be a network not already attached to PacketFence server
+pfdhcplistener_multi_tenant.nodes.node11.dhcp_server: 10.10.10.1
+
